# global-asset-tracker-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  app.js  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py  styles.css
.streamlit/: secrets.example.toml
data/reports/: 2026-06-01_core.md  2026-06-02_core.md  2026-06-03_core.md  2026-06-04_core.md  2026-06-05_core.md  2026-06-08_core.md  2026-06-09_betting.md  2026-06-09_core.md  2026-06-10_core.md  2026-06-11_core.md  2026-06-12_core.md  2026-06-15_betting.md  2026-06-15_core.md  2026-06-16_betting.md  2026-06-16_core.md  2026-06-17_betting.md  2026-06-17_core.md  2026-06-18_betting.md  2026-06-18_core.md  2026-06-22_betting.md  2026-06-22_core.md  2026-06-23_core.md  2026-06-24_core.md  2026-06-25_core.md  2026-06-26_core.md  2026-06-29_core.md  (+4 more)
docs/: v2需求拆解.md  公开部署说明.md  数据字典.md  知识星球使用规则提炼.md
pages/: 期货品种四象限.py
scripts/: fetch_prices.ps1  import_daily.ps1  import_prices.ps1  map_symbol.ps1  publish_site_data_main.py  publish_static_pages.py  refresh_names.ps1  run_tests.ps1  start_dashboard.ps1  update_daily_site.ps1
site/: index.html
site-v2/: app.js  index.html  styles.css
src/: export_static_site.py
tests/: conftest.py  test_analysis.py  test_asset_names.py  test_auth.py  test_cli.py  test_dashboard_data.py  test_dashboard_figures.py  test_database.py  test_futures_quadrant.py  test_market_data.py  test_parser.py  test_reports.py  test_rules.py  test_site_v2.py  test_static_export.py  test_streamlit_app.py  test_update_daily_site_script.py
v2/: app.js  index.html  styles.css
(+17 files in other folders)
