[project]
name = "global-asset-tracker"
version = "0.1.0"
description = "Knowledge Planet global asset signal importer, summarizer, and dashboard."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pdfplumber>=0.10",
  "openpyxl>=3.1",
  "streamlit>=1.35",
  "plotly>=5.20",
  "yfinance>=0.2",
  "akshare>=1.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
